2009-08-10  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	C-ify the FFT code.
	
	* programs/benchmarks/fft/fft.slh,
	* programs/benchmarks/fft/fft_bench.sl,
	* programs/benchmarks/fft/fft_bench1.sl,
	* programs/benchmarks/fft/fft_bench2.sl,
	* programs/benchmarks/fft/fft_extra.sl,
	* programs/benchmarks/fft/fft_impl1.sl,
	* programs/benchmarks/fft/fft_impl2.sl,
	* programs/benchmarks/fft/fft_test.sl,
	* programs/benchmarks/fft/fft_test1.sl,
	* programs/benchmarks/fft/fft_test2.sl: Rename to...

	* programs/benchmarks/fft/fft.h,
	* programs/benchmarks/fft/fft_bench.c,
	* programs/benchmarks/fft/fft_bench1.c,
	* programs/benchmarks/fft/fft_bench2.c,
	* programs/benchmarks/fft/fft_extra.c,
	* programs/benchmarks/fft/fft_impl1.c,
	* programs/benchmarks/fft/fft_impl2.c,
	* programs/benchmarks/fft/fft_test.c,
	* programs/benchmarks/fft/fft_test1.c,	
	* programs/benchmarks/fft/fft_test2.c: ... here. Use CPP syntax
	where appropriate.

	* programs/benchmarks/fft/Makefile.am: Update accordingly. Drop
	debug flag and allow (some) optimization for the table generators.
	
2009-08-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Start C-ifying in `programs/'.
	
	* sl.mk: Build from `.c' instead of `.sl'.
		
	* programs/demo/fibre.sl,
	* programs/demo/fibre.sl.d1,
	* programs/demo/fibre.sl.d2,
	* programs/demo/fibre.sl.d3,
	* programs/demo/answer.sl,
	* programs/demo/helloworld.sl,
	* programs/demo/fibonacci.sl,
	* programs/demo/roman.sl,
	* programs/demo/10threads.sl: Rename to...

	* programs/demo/fibre.c,
	* programs/demo/fibre.c.d1,
	* programs/demo/fibre.c.d2,
	* programs/demo/fibre.c.d3,
	* programs/demo/answer.c,
	* programs/demo/helloworld.c,
	* programs/demo/fibonacci.c,
	* programs/demo/roman.c,	
	* programs/demo/10threads.c: ... here. Use CPP syntax where
	appropriate.
	
	* programs/demo/Makefile.am: Update accordingly.

2009-08-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix `svp_assert'.

	Due to the way the `printf' macro works (uses `typeof' internally)